Reduce the use of thread in game engine; ball out of bound issue solved

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -1,6 +1,6 @@
 .root {
     /* -fx-background-color: #1d1d1d; */
-    -fx-background-color: purple;
+    -fx-background-color: black;
 }
 
 .goldRoot {
